// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeetingListItem /> snapshot should match snapshot 1`] = `
<MeetingListItem>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Transparent"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="Transparent"
          data-disabled={false}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Transparent"
              />
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with buttonGroup 1`] = `
<MeetingListItem
  buttonGroup={<ButtonGroup />}
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Transparent"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="Transparent"
          data-disabled={false}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Transparent"
              />
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
              data-position="middle"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-end-section"
            position="end"
          >
            <div
              className="md-meeting-list-item-end-section"
              data-position="end"
            >
              <ButtonGroup>
                <div
                  className="md-button-group-wrapper"
                  data-compressed={false}
                  data-orientation="horizontal"
                  data-round={false}
                  data-separator={false}
                  data-spaced={false}
                />
              </ButtonGroup>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with className 1`] = `
<MeetingListItem
  className="example-class"
>
  <ListItemBase
    className="example-class md-meeting-list-item-wrapper"
    data-color="Transparent"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="example-class md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="Transparent"
          data-disabled={false}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Transparent"
              />
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with color 1`] = `
<MeetingListItem
  color="AcceptedActive"
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="AcceptedActive"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="AcceptedActive"
          data-disabled={false}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="AcceptedActive"
              />
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-AcceptedActive"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-AcceptedActive"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with id 1`] = `
<MeetingListItem
  id="example-id"
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Transparent"
    id="example-id"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="Transparent"
          data-disabled={false}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Transparent"
              />
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with image 1`] = `
<MeetingListItem
  image={
    <Icon
      name="placeholder"
    />
  }
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Transparent"
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="Transparent"
          data-disabled={false}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Transparent"
              />
              <Icon
                name="placeholder"
                scale={12}
                strokeColor="none"
                weight="bold"
              >
                <div
                  aria-hidden="true"
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-autoscale={false}
                    data-scale={12}
                    data-test="placeholder"
                    fill="currentColor"
                    height="100%"
                    style={
                      Object {
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with isDisabled 1`] = `
<MeetingListItem
  isDisabled={true}
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Transparent"
    isDisabled={true}
    isPadded={true}
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="Transparent"
          data-disabled={true}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Transparent"
              />
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;

exports[`<MeetingListItem /> snapshot should match snapshot with style 1`] = `
<MeetingListItem
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ListItemBase
    className="md-meeting-list-item-wrapper"
    data-color="Transparent"
    isPadded={true}
    size={50}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-meeting-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-color="Transparent"
          data-disabled={false}
          data-focused={false}
          data-interactive={true}
          data-padded={true}
          data-shape="rectangle"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          style={
            Object {
              "color": "pink",
            }
          }
          tabIndex={0}
        >
          <ListItemBaseSection
            className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
            position="start"
          >
            <div
              className="md-meeting-list-item-start-section md-meeting-list-item-start-section-no-image"
              data-position="start"
            >
              <div
                className="md-meeting-list-item-border"
                data-color="Transparent"
              />
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
            position="middle"
          >
            <div
              className="md-meeting-list-item-middle-section md-meeting-list-item-middle-section-Transparent"
              data-position="middle"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</MeetingListItem>
`;
